add minus & multiplied & divided

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -27,8 +27,8 @@
             android:id="@+id/btnClear"
             android:layout_width="match_parent"
             android:layout_height="79dp"
-            android:text="C"
-            android:onClick="onClickBtnClear"/>
+            android:onClick="onClickBtnClear"
+            android:text="C" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,30 +40,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="7"
-                android:onClick="onClickBtn7"/>
+                android:onClick="onClickBtn7"
+                android:text="7" />
 
             <Button
                 android:id="@+id/btn8"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="8"
-                android:onClick="onClickBtn8"/>
+                android:onClick="onClickBtn8"
+                android:text="8" />
 
             <Button
                 android:id="@+id/btn9"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="9"
-                android:onClick="onClickBtn9"/>
+                android:onClick="onClickBtn9"
+                android:text="9" />
 
             <Button
                 android:id="@+id/button10"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
+                android:onClick="onClickDivided"
                 android:text="/" />
 
         </LinearLayout>
@@ -78,30 +79,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="4"
-                android:onClick="onClickBtn4"/>
+                android:onClick="onClickBtn4"
+                android:text="4" />
 
             <Button
                 android:id="@+id/btn5"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="5"
-                android:onClick="onClickBtn5"/>
+                android:onClick="onClickBtn5"
+                android:text="5" />
 
             <Button
                 android:id="@+id/btn6"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="6"
-                android:onClick="onClickBtn6"/>
+                android:onClick="onClickBtn6"
+                android:text="6" />
 
             <Button
                 android:id="@+id/button11"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
+                android:onClick="onClickMultiplied"
                 android:text="*" />
         </LinearLayout>
 
@@ -115,30 +117,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="1"
-                android:onClick="onClickBtn1"/>
+                android:onClick="onClickBtn1"
+                android:text="1" />
 
             <Button
                 android:id="@+id/btn2"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="2"
-                android:onClick="onClickBtn2"/>
+                android:onClick="onClickBtn2"
+                android:text="2" />
 
             <Button
                 android:id="@+id/btn3"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="3"
-                android:onClick="onClickBtn3"/>
+                android:onClick="onClickBtn3"
+                android:text="3" />
 
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
+                android:onClick="onClickMinus"
                 android:text="-" />
         </LinearLayout>
 
@@ -152,32 +155,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="0"
-                android:onClick="onClickBtn0"/>
+                android:onClick="onClickBtn0"
+                android:text="0" />
 
             <Button
                 android:id="@+id/button14"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="."
-                android:onClick="onClickDot"/>
+                android:onClick="onClickDot"
+                android:text="." />
 
             <Button
                 android:id="@+id/btnResult"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="="
-                android:onClick="onClickEquals"/>
+                android:onClick="onClickEquals"
+                android:text="=" />
 
             <Button
                 android:id="@+id/btnPlus"
                 android:layout_width="wrap_content"
                 android:layout_height="79dp"
                 android:layout_weight="1"
-                android:text="+"
-                android:onClick="onClickPlus"/>
+                android:onClick="onClickPlus"
+                android:text="+" />
         </LinearLayout>
     </LinearLayout>
 
