--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -18,6 +18,8 @@
             android:layout_marginTop="44dp"
             android:textAlignment="textEnd"
             android:textSize="48sp"
+            android:maxLength="14"
+            android:singleLine = "true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.415"
             app:layout_constraintStart_toStartOf="parent"
