--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -34,7 +34,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="79dp"
                 android:layout_weight="1"
+                android:radius="60dip"
                 android:onClick="onClickBtnClear"
+
                 android:text="C" />
 
             <Button
